Rename microservice to repository in git examples

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/_git_exporter_example_microservice_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/_git_exporter_example_microservice_blueprint.mdx
@@ -1,11 +1,11 @@
 <details>
-<summary>Microservice blueprint</summary>
+<summary>Repository blueprint</summary>
 
 ```json showLineNumbers
 {
-  "identifier": "microservice",
-  "title": "Microservice",
-  "icon": "Microservice",
+  "identifier": "repository",
+  "title": "Repository",
+  "icon": "Repository",
   "schema": {
     "properties": {
       "readme": {
@@ -13,7 +13,7 @@
         "type": "string",
         "format": "markdown"
       },
-      "repositoryUrl": {
+      "url": {
         "title": "Repository URL",
         "type": "string",
         "format": "url"
