--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-issue/_github_exporter_example_issue_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-issue/_github_exporter_example_issue_port_app_config.mdx
@@ -12,7 +12,7 @@ resources:
         mappings:
           identifier: ".name" # The Entity identifier will be the repository name.
           title: ".name"
-          blueprint: '"microservice"'
+          blueprint: '"repository"'
           properties:
             readme: file://README.md
             url: .html_url
@@ -37,7 +37,7 @@ resources:
             issueNumber: ".number"
             link: ".html_url"
           relations:
-            service: ".repo"
+            repository: ".repo"
 ```
 
 </details>
