--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_merge_request_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_merge_request_blueprint.mdx
@@ -46,8 +46,8 @@
     }
   },
   "relations": {
-    "pipeline": {
-      "target": "pipeline",
+    "repository": {
+      "target": "repository",
       "required": false,
       "many": false
     }
