--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-pipeline-job/_git_exporter_example_pipeline_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-pipeline-job/_git_exporter_example_pipeline_blueprint.mdx
@@ -69,10 +69,10 @@
   },
   "mirrorProperties": {},
   "calculationProperties": {},
-  "microservice": {
-    "service": {
-      "target": "microservice",
-      "type": "Microservice",
+  "relations": {
+    "repository": {
+      "target": "repository",
+      "type": "Repository",
       "required": true,
       "many": false
     }
