--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/bitbucket/_bitbucket_exporter_example_monorepo_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/bitbucket/_bitbucket_exporter_example_monorepo_port_app_config.mdx
@@ -16,7 +16,7 @@ resources:
       entity:
         mappings:
           identifier: .folder.name
-          blueprint: '"microservice"'
+          blueprint: '"repository"'
           properties:
             url: .repo.links.html.href + "/src/" + .repo.mainbranch.name + "/" + .folder.path
             readme: file://README.md
