--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-workflow-workflowrun/_git_exporter_example_workflow_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-workflow-workflowrun/_git_exporter_example_workflow_blueprint.mdx
@@ -53,8 +53,8 @@
   "mirrorProperties": {},
   "calculationProperties": {},
   "relations": {
-    "service": {
-      "target": "microservice",
+    "repository": {
+      "target": "repository",
       "required": true,
       "many": false
     }
