--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_port_app_config.mdx
@@ -12,7 +12,7 @@ resources:
         mappings:
           identifier: .path_with_namespace | gsub(" "; "")
           title: .name
-          blueprint: '"microservice"'
+          blueprint: '"repository"'
           properties:
             url: .web_url
             description: .description
@@ -35,7 +35,7 @@ resources:
             description: .description
             link: .web_url
           relations:
-            microservice: .references.full | gsub("!.+"; "")
+            repository: .references.full | gsub("!.+"; "")
 ```
 
 </details>
