--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-issue/_git_exporter_example_issue_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-issue/_git_exporter_example_issue_blueprint.mdx
@@ -56,9 +56,9 @@
     }
   },
   "relations": {
-    "microservice": {
-      "target": "microservice",
-      "title": "Microservice",
+    "repository": {
+      "target": "repository",
+      "title": "Repository",
       "required": true,
       "many": false
     }
