Add example to map repo folders and PRs

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/_git_exporter_example_repository_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/_git_exporter_example_repository_blueprint.mdx
@@ -5,7 +5,7 @@
 {
   "identifier": "repository",
   "title": "Repository",
-  "icon": "Repository",
+  "icon": "Microservice",
   "schema": {
     "properties": {
       "readme": {
