--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-folders/_github_exporter_example_repo_folders_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-folders/_github_exporter_example_repo_folders_port_app_config.mdx
@@ -43,7 +43,7 @@ resources:
       query: "true"
       folders:
         - path: "*" # Using "*" will ingest the folders from the root of each of repository as entities
-          repos:
+          repos: # Add any repositories you want to map folders from to the following list
             - backend-service
             - frontend-service
     port:
