PORT-4611 add folder mapping example to git hub docs (#487)
* Rename microservice to repository in git examples

* Add example to map repo folders and PRs

* Update

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/_git_exporter_example_repository_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/_git_exporter_example_repository_blueprint.mdx
@@ -1,10 +1,10 @@
 <details>
-<summary>Microservice blueprint</summary>
+<summary>Repository blueprint</summary>
 
 ```json showLineNumbers
 {
-  "identifier": "microservice",
-  "title": "Microservice",
+  "identifier": "repository",
+  "title": "Repository",
   "icon": "Microservice",
   "schema": {
     "properties": {
@@ -13,7 +13,7 @@
         "type": "string",
         "format": "markdown"
       },
-      "repositoryUrl": {
+      "url": {
         "title": "Repository URL",
         "type": "string",
         "format": "url"
