--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_supported_resources.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_supported_resources.mdx
@@ -6,5 +6,6 @@
 - [`workflow-run`](https://docs.github.com/en/rest/actions/workflow-runs#get-a-workflow-run)
 - [`issue`](https://docs.github.com/en/rest/issues/issues#get-an-issue)
 - [`folder`](https://docs.github.com/en/rest/git/trees#get-a-tree)
+- [`team`](https://docs.github.com/en/rest/teams/teams#get-a-team-by-name)
 
 :::
