change githubTeam identifier to name

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-teams/_github_export_example_team_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-teams/_github_export_example_team_blueprint.mdx
@@ -8,6 +8,10 @@
   "icon": "Github",
   "schema": {
     "properties": {
+      "id": {
+        "title": "Id",
+        "type": "integer"
+      },
       "slug": {
         "title": "Slug",
         "type": "string"
