add dependabot Alerts support

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_supported_resources.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_supported_resources.mdx
@@ -7,5 +7,6 @@
 - [`issue`](https://docs.github.com/en/rest/issues/issues#get-an-issue)
 - [`folder`](https://docs.github.com/en/rest/git/trees#get-a-tree)
 - [`team`](https://docs.github.com/en/rest/teams/teams#get-a-team-by-name)
+- [`dependabot-alert`](https://docs.github.com/en/rest/dependabot/alerts#list-dependabot-alerts-for-a-repository)
 
 :::
