--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-dependabot-alerts/_github_exporter_example_dependabot_alert_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-dependabot-alerts/_github_exporter_example_dependabot_alert_blueprint.mdx
@@ -57,6 +57,21 @@
         "title": "CVE ID",
         "type": "string"
       }
+      "url": {
+        "title": "URL",
+        "type": "string",
+        "format": "url",
+        "icon": "DefaultProperty"
+      },
+      "references": {
+        "icon": "Vulnerability",
+        "title": "References",
+        "type": "array",
+        "items": {
+          "type": "string",
+          "format": "url"
+        }
+      }
     },
     "required": []
   },
