--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-dependabot-alerts/_github_exporter_example_repo_dependabot_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-dependabot-alerts/_github_exporter_example_repo_dependabot_port_app_config.mdx
@@ -34,6 +34,8 @@ resources:
             scope: .dependency.scope
             ghsaID: .security_advisory.ghsa_id
             cveID: .security_advisory.cve_id
+            url: .url
+            references: "[.security_advisory.references[].url]"
           relations:
             repository: .repo.name
 ```
