--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-dependabot-alerts/_github_exporter_example_dependabot_alert_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-dependabot-alerts/_github_exporter_example_dependabot_alert_blueprint.mdx
@@ -23,10 +23,10 @@
       "state": {
         "title": "State",
         "type": "string",
-        "enum": ["auto_dismissed", "dismised", "fixed", "open"],
+        "enum": ["auto_dismissed", "dismissed", "fixed", "open"],
         "enumColors": {
           "auto_dismissed": "green",
-          "dismised": "green",
+          "dismissed": "green",
           "fixed": "green",
           "open": "red"
         },
