Add pull request to repo relation in github example

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_example_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_example_port_app_config.mdx
@@ -36,6 +36,8 @@ resources:
             description: ".body"
             prNumber: ".id"
             link: ".html_url"
+          relations:
+            repository: .head.repo.name
 ```
 
 </details>
