--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_example_pull_request_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_example_pull_request_blueprint.mdx
@@ -58,7 +58,14 @@
   },
   "mirrorProperties": {},
   "calculationProperties": {},
-  "relations": {}
+  "relations": {
+    "repository": {
+      "title": "Repository",
+      "target": "repository",
+      "required": false,
+      "many": false
+    }
+  }
 }
 ```
 
