updated the helm chart to use polling instead of kafka

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/terraform/_example_tfstate_webhook_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/terraform/_example_tfstate_webhook_config.mdx
@@ -1,15 +1,10 @@
 ```json showLineNumbers
-{
-  "identifier": "terraformResourceMapper",
-  "title": "Terraform Resources Mapper",
-  "description": "A webhook configuration to map Terraform tfstate file",
-  "icon": "Terraform",
-  "mappings": [
+[
     {
       "blueprint": "terraformResource",
       "itemsToParse": ".body.resources",
       "entity": {
-        "identifier": ".item.id",
+        "identifier": ".item.type + '-' + .item.name",
         "title": ".item.name",
         "properties": {
           "mode": ".item.mode",
@@ -20,8 +15,5 @@
         }
       }
     }
-  ],
-  "enabled": true,
-  "security": {}
-}
+  ]
 ```
