Revert "updated the helm chart to use polling instead of kafka"
This reverts commit ca81cd4b1cd69cfed42b8db3c1b46adbf5b5a071.

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/terraform/_example_tfstate_webhook_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/terraform/_example_tfstate_webhook_config.mdx
@@ -1,10 +1,15 @@
 ```json showLineNumbers
-[
+{
+  "identifier": "terraformResourceMapper",
+  "title": "Terraform Resources Mapper",
+  "description": "A webhook configuration to map Terraform tfstate file",
+  "icon": "Terraform",
+  "mappings": [
     {
       "blueprint": "terraformResource",
       "itemsToParse": ".body.resources",
       "entity": {
-        "identifier": ".item.type + '-' + .item.name",
+        "identifier": ".item.id",
         "title": ".item.name",
         "properties": {
           "mode": ".item.mode",
@@ -15,5 +20,8 @@
         }
       }
     }
-  ]
+  ],
+  "enabled": true,
+  "security": {}
+}
 ```
