--- a/docs/build-your-software-catalog/sync-data-to-catalog/azure/examples/resource_group/_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/azure/examples/resource_group/_port_app_config.mdx
@@ -1,5 +1,5 @@
 <details>
-<summary>Mapping Configuration</summary>
+<summary>Mapping Configuration for Resource group</summary>
 
 ```yaml showLineNumbers
 resources:
