--- a/docs/build-your-software-catalog/sync-data-to-catalog/azure/examples/storage/_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/azure/examples/storage/_port_app_config.mdx
@@ -1,6 +1,8 @@
 <details>
 
-<summary>Mapping configuration</summary>
+<summary>
+  Mapping configuration for Storage Account and Storage Container
+</summary>
 
 ```yaml showLineNumbers
 resources:
