add defaultBranch to all git examples and align to camelCase and to `repository` identifier for blueprints across all git options

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-issue/_github_exporter_example_issue_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-issue/_github_exporter_example_issue_port_app_config.mdx
@@ -16,6 +16,7 @@ resources:
           properties:
             readme: file://README.md
             url: .html_url
+            defaultBranch: .default_branch
   - kind: issue
     selector:
       query: ".pull_request == null" # JQ boolean query. If evaluated to false - skip syncing the object.
