--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_port_app_config.mdx
@@ -18,7 +18,8 @@ resources:
             readme: file://README.md
             description: .description
             namespace: .namespace.name
-            full_path: .namespace.full_path
+            fullPath: .namespace.full_path
+            defaultBranch: .default_branch
   - kind: mergeRequest
     selector:
       query: "true"
