--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-issue/_gitlab_exporter_example_issue_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-issue/_gitlab_exporter_example_issue_port_app_config.mdx
@@ -17,7 +17,8 @@ resources:
             url: .web_url
             description: .description
             namespace: .namespace.name
-            full_path: .namespace.full_path
+            fullPath: .namespace.full_path
+            defaultBranch: .default_branch
   - kind: issue
     selector:
       query: "true"
