--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_example_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_example_port_app_config.mdx
@@ -16,6 +16,7 @@ resources:
           properties:
             readme: file://README.md # fetching the README.md file that is within the root folder of the repository and ingesting its contents as a markdown property
             url: .html_url
+            defaultBranch: .default_branch
   - kind: pull-request
     selector:
       query: "true" # JQ boolean query. If evaluated to false - skip syncing the object.
