--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-folders/_github_exporter_example_repo_folders_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-folders/_github_exporter_example_repo_folders_port_app_config.mdx
@@ -14,8 +14,9 @@ resources:
           title: .name
           blueprint: '"repository"'
           properties:
-            url: .html_url
             readme: file://README.md
+            url: .html_url
+            defaultBranch: .default_branch
   - kind: pull-request
     selector:
       query: "true"
