--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-teams/_github_exporter_example_repository_with_teams_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-teams/_github_exporter_example_repository_with_teams_port_app_config.mdx
@@ -32,8 +32,9 @@ resources:
           title: .name
           blueprint: '"repository"'
           properties:
-            url: .html_url
             readme: file://README.md
+            url: .html_url
+            defaultBranch: .default_branch
           relations:
             githubTeams: "[.teams[].id | tostring]"
 ```
