--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-workflow-workflowrun/_github_exporter_example_wf_wfr_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-workflow-workflowrun/_github_exporter_example_wf_wfr_port_app_config.mdx
@@ -16,6 +16,7 @@ resources:
           properties:
             readme: file://README.md
             url: .html_url
+            defaultBranch: .default_branch
   - kind: workflow
     selector:
       query: "true" # JQ boolean query. If evaluated to false - skip syncing the object.
