bug: Minor docs improvement

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-dependabot-alerts/_github_exporter_example_dependabot_alert_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-dependabot-alerts/_github_exporter_example_dependabot_alert_blueprint.mdx
@@ -56,11 +56,11 @@
       "cveID": {
         "title": "CVE ID",
         "type": "string"
-      }
+      },
       "url": {
         "title": "URL",
         "type": "string",
-        "format": "url",
+        "format": "url"
       },
       "references": {
         "icon": "Vulnerability",
