add environments and deployments

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_supported_resources.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_supported_resources.mdx
@@ -2,6 +2,8 @@
 
 - [`repository`](https://docs.github.com/en/rest/repos/repos#get-a-repository)
 - [`pull-request`](https://docs.github.com/en/rest/pulls/pulls#get-a-pull-request)
+- [`environment`](https://docs.github.com/en/rest/deployments/environments#get-an-environment)
+- [`deployment`](https://docs.github.com/en/rest/deployments/deployments#get-a-deployment)
 - [`workflow`](https://docs.github.com/en/rest/actions/workflows#get-a-workflow)
 - [`workflow-run`](https://docs.github.com/en/rest/actions/workflow-runs#get-a-workflow-run)
 - [`issue`](https://docs.github.com/en/rest/issues/issues#get-an-issue)
