added relation to bitbucket example

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/bitbucket/_bitbucket_exporter_example_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/bitbucket/_bitbucket_exporter_example_port_app_config.mdx
@@ -33,6 +33,8 @@ resources:
             status: ".state"
             updatedAt: ".updated_on"
             link: ".links.html.href"
+          relations:
+            repository: destination.repository.name
 ```
 
 </details>
