--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-deployments-environments/_github_exporter_example_deployments_and_environments_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-deployments-environments/_github_exporter_example_deployments_and_environments_port_app_config.mdx
@@ -33,6 +33,8 @@ resources:
             protectedBranches: .protected_branches
             createdAt: .created_at
             updatedAt: .updated_at
+          relations:
+            repository: .repo
   - kind: deployment
     selector:
       query: "true"
