removed from mapping extensions and added to examples

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_repository_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_repository_blueprint.mdx
@@ -22,6 +22,10 @@
         "title": "Description",
         "type": "string"
       },
+      "language": {
+        "title": "Language",
+        "type": "string"
+      }
       "namespace": {
         "title": "Namespace",
         "type": "string"
