--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-issue/_gitlab_exporter_example_issue_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-issue/_gitlab_exporter_example_issue_port_app_config.mdx
@@ -16,6 +16,7 @@ resources:
           properties:
             url: .web_url
             description: .description
+            language: .__languages | to_entries | max_by(.value) | .key
             namespace: .namespace.name
             fullPath: .namespace.full_path
             defaultBranch: .default_branch
