--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_port_app_config.mdx
@@ -17,6 +17,7 @@ resources:
             url: .web_url
             readme: file://README.md
             description: .description
+            language: .__languages | to_entries | max_by(.value) | .key
             namespace: .namespace.name
             fullPath: .namespace.full_path
             defaultBranch: .default_branch
