--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/grafana/_example_alert_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/grafana/_example_alert_blueprint.mdx
@@ -1,7 +1,7 @@
 ```json showLineNumbers
 {
   "identifier": "grafanaAlert",
-  "description": "This blueprint represents a Grafana alerts in your software catalog",
+  "description": "This blueprint represents a Grafana alert in your software catalog",
   "title": "Grafana Alert",
   "icon": "Grafana",
   "schema": {
