update merge-request kind

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_port_app_config.mdx
@@ -21,7 +21,7 @@ resources:
             namespace: .namespace.name
             fullPath: .namespace.full_path
             defaultBranch: .default_branch
-  - kind: mergeRequest
+  - kind: merge-request
     selector:
       query: "true"
     port:
