--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/bitbucket/_bitbucket_exporter_example_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/bitbucket/_bitbucket_exporter_example_port_app_config.mdx
@@ -34,7 +34,7 @@ resources:
             updatedAt: ".updated_on"
             link: ".links.html.href"
           relations:
-            repository: destination.repository.name
+            repository: ".destination.repository.name"
 ```
 
 </details>
