update get credentials screenshot, update ocean admonitions in webhook examples

--- a/docs/build-your-software-catalog/sync-data-to-catalog/api/_template_docs/_find_credentials.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/api/_template_docs/_find_credentials.mdx
@@ -1,7 +1,7 @@
 import Image from "@theme/IdealImage";
 import Credentials from "../../../../../static/img/software-catalog/credentials-modal.png";
 
-To find your Port API credentials go to [Port](https://app.getport.io), hover on the `3 dots button` at the top right corner, select `Credentials` and then you will be able to view and copy your `CLIENT_ID` and `CLIENT_SECRET`:
+To get your Port API credentials go to your [Port application](https://app.getport.io), hover over the `...` button in the top right corner, and select `Credentials`. Here you can view and copy your `CLIENT_ID` and `CLIENT_SECRET`:
 
 <center>
 
