--- a/docs/build-your-software-catalog/sync-data-to-catalog/api/_template_docs/_find_credentials_collapsed.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/api/_template_docs/_find_credentials_collapsed.mdx
@@ -1,7 +1,7 @@
 import CredentialsContent from "./_find_credentials.mdx";
 
 <details>
-<summary>Find your Port credentials</summary>
+<summary>Get your Port credentials</summary>
 
 <CredentialsContent />
 
