--- a/docs/build-your-software-catalog/sync-data-to-catalog/code-quality-security/_docker-parameters.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/code-quality-security/_docker-parameters.mdx
@@ -6,4 +6,4 @@
 | `OCEAN__PORT__CLIENT_ID`                            | Your port client id ([How to get the credentials](https://docs.getport.io/build-your-software-catalog/sync-data-to-catalog/api/#find-your-port-credentials))                                                                                                                             | ✅       |
 | `OCEAN__PORT__CLIENT_SECRET`                        | Your port client secret ([How to get the credentials](https://docs.getport.io/build-your-software-catalog/sync-data-to-catalog/api/#find-your-port-credentials))                                                                                                                         | ✅       |
 | `OCEAN__INITIALIZE_PORT_RESOURCES`                  | Default true, When set to true the integration will create default blueprints and the port App config Mapping. Read more about [initializePortResources](https://ocean.getport.io/develop-an-integration/integration-configuration/#initializeportresources---initialize-port-resources) | ❌       |
-| `OCEAN__INTEGRATION__IDENTIFIER`                    | The integration to be installed                                                                                                                                                                                                                                                          | ✅       |
+| `OCEAN__INTEGRATION__IDENTIFIER`                    | The identifier of the integration that will be installed                                                                                                                                                                                                                                 | ✅       |
