ingest terraform outputs to Port

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/terraform/_example_tfstate_webhook_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/terraform/_example_tfstate_webhook_config.mdx
@@ -6,7 +6,23 @@
   "icon": "Terraform",
   "mappings": [
     {
+      "blueprint": "terraformOutput",
+      "filter": ".body | has(\"outputs\")",
+      "itemsToParse": ".body.outputs",
+      "entity": {
+        "identifier": ".item.name | tostring",
+        "title": ".item.name | tostring",
+        "properties": {
+          "description": ".item.description",
+          "sensitive": ".item.sensitive",
+          "type": ".item.type",
+          "value": ".item.value"
+        }
+      }
+    },
+    {
       "blueprint": "terraformResource",
+      "filter": ".body | has(\"resources\")",
       "itemsToParse": ".body.resources",
       "entity": {
         "identifier": ".item.id",
