add lineage to blueprints

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/terraform/_example_tfstate_output_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/terraform/_example_tfstate_output_blueprint.mdx
@@ -22,6 +22,10 @@
       "description": {
         "title": "Description",
         "type": "string"
+      },
+      "lineage": {
+        "title": "Lineage",
+        "type": "string"
       }
     },
     "required": []
