--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/terraform/_example_tfstate_resource_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/terraform/_example_tfstate_resource_blueprint.mdx
@@ -27,6 +27,10 @@
       "instances": {
         "title": "Instances",
         "type": "array"
+      },
+      "lineage": {
+        "title": "Lineage",
+        "type": "string"
       }
     },
     "required": []
