--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/terraform/_example_tfstate_webhook_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/terraform/_example_tfstate_webhook_config.mdx
@@ -16,7 +16,8 @@
           "description": ".item.description",
           "sensitive": ".item.sensitive",
           "type": ".item.type",
-          "value": ".item.value"
+          "value": ".item.value",
+          "lineage": ".body.lineage"
         }
       }
     },
@@ -32,7 +33,8 @@
           "module": ".item.module",
           "type": ".item.type",
           "provider": ".item.provider",
-          "instances": ".item.instances"
+          "instances": ".item.instances",
+          "lineage": ".body.lineage"
         }
       }
     }
