Ingest terraform outputs to Port (#705)
* ingest terraform outputs to Port

* add lineage to blueprints

---------

Co-authored-by: hadar-co <hadar@datree.io>

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/terraform/_example_tfstate_webhook_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/terraform/_example_tfstate_webhook_config.mdx
@@ -6,7 +6,24 @@
   "icon": "Terraform",
   "mappings": [
     {
+      "blueprint": "terraformOutput",
+      "filter": ".body | has(\"outputs\")",
+      "itemsToParse": ".body.outputs",
+      "entity": {
+        "identifier": ".item.name | tostring",
+        "title": ".item.name | tostring",
+        "properties": {
+          "description": ".item.description",
+          "sensitive": ".item.sensitive",
+          "type": ".item.type",
+          "value": ".item.value",
+          "lineage": ".body.lineage"
+        }
+      }
+    },
+    {
       "blueprint": "terraformResource",
+      "filter": ".body | has(\"resources\")",
       "itemsToParse": ".body.resources",
       "entity": {
         "identifier": ".item.id",
@@ -16,7 +33,8 @@
           "module": ".item.module",
           "type": ".item.type",
           "provider": ".item.provider",
-          "instances": ".item.instances"
+          "instances": ".item.instances",
+          "lineage": ".body.lineage"
         }
       }
     }
