--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/falco/_example_alert_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/falco/_example_alert_blueprint.mdx
@@ -1,8 +1,8 @@
 ```json showLineNumbers
 {
-  "identifier": "falco_kicks",
-  "title": "Falco Side Kicks",
-  "icon": "Service",
+  "identifier": "falco_alerts",
+  "title": "Falco Alerts",
+  "icon": "Alert",
   "schema": {
     "properties": {
       "priority": {
