update blueprint from plural to singular

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/falco/_example_alert_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/falco/_example_alert_blueprint.mdx
@@ -1,7 +1,7 @@
 ```json showLineNumbers
 {
-  "identifier": "falco_alerts",
-  "title": "Falco Alerts",
+  "identifier": "falco_alert",
+  "title": "Falco Alert",
   "icon": "Alert",
   "schema": {
     "properties": {
