--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/falco/_example_webhook_configuration.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/falco/_example_webhook_configuration.mdx
@@ -1,7 +1,7 @@
 ```json showLineNumbers
 [
   {
-    "blueprint": "falco_alerts",
+    "blueprint": "falco_alert",
     "filter": "true",
     "entity": {
       "identifier": ".body.hostname + \"-\" + .body.time | tostring",
