add app url field

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-dependabot-alerts/_github_exporter_example_dependabot_alert_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-repository-dependabot-alerts/_github_exporter_example_dependabot_alert_blueprint.mdx
@@ -57,8 +57,13 @@
         "title": "CVE ID",
         "type": "string"
       },
-      "url": {
-        "title": "URL",
+      "api_url": {
+        "title": "API URL",
+        "type": "string",
+        "format": "url"
+      },
+      "app_url": {
+        "title": "APP URL",
         "type": "string",
         "format": "url"
       },
