--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-pipeline-job/_git_exporter_example_pipeline_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-pipeline-job/_git_exporter_example_pipeline_blueprint.mdx
@@ -71,8 +71,8 @@
   "calculationProperties": {},
   "relations": {
     "repository": {
+      "title": "Repository"
       "target": "repository",
-      "type": "Repository",
       "required": true,
       "many": false
     }
